# mcb

./: .PROTOCOL_OF_RIGOR.md  .aider.conf.yml  .clinerules  .consolidated_v022.rs  .dockerignore  .env.example  .final_tests_log  .gitignore  .gitmodules  .hadolint.yaml  .markdownlintignore  .mcb-validate.toml  .pr_agent.toml  .pre-commit-config.yaml  .shellcheckrc  .tokeignore  .windsurfrules  .yamllint.yml  AGENTS.md  ANALYSIS-MCB-VALIDATE-INTEGRATION.md  ARCHITECTURE.md  ARCHITECTURE_ALIGNMENT_ADR-041-046.md  ARCHITECTURE_INSIGHTS.md  AUDIT_FINAL_v0.2.0.md  CHANGELOG.md  CHECKS_REPORT.md  CHECK_FIXES_SUMMARY.md  CLAUDE.md  CONTINUATION-QUALITY-REFACTOR-PLANNING.md  CONTINUATION_ATLAS.md  CONTINUATION_COSMIC.md  CONTINUATION_PROMPT_SISYPHUS_VECTOR.md  CONTINUATION_SISYPHUS_BUILD_FIX.md  CONTRIBUTING.md  CONVENTIONS.md  CRATES.md  CRITICAL_CHECKS.md  Cargo.toml  DEPLOYMENT.md  DOCS_IMPLEMENTATION_PLAN.md  (+73 more)
crates/mcb/: Cargo.toml  mcb.2026-02-10
crates/mcb-application/: Cargo.toml
crates/mcb-application/src/: constants.rs  lib.rs
crates/mcb-application/src/decorators/: instrumented_embedding.rs  mod.rs
crates/mcb-application/src/domain_services/: chunking.rs  memory.rs  mod.rs  search.rs
crates/mcb-application/src/ports/: admin.rs  mod.rs  services.rs
crates/mcb-application/src/services/: mod.rs  repository_resolver.rs
crates/mcb-application/src/use_cases/: agent_session_service.rs  context_service.rs  git_indexing.rs  indexing_service.rs  issue_entity_service.rs  memory_service.rs  mod.rs  org_entity_service.rs  plan_entity_service.rs  project_service.rs  search_service.rs  validation_service.rs  vcs_entity_service.rs  vcs_indexing.rs
crates/mcb-application/tests/: search_test.rs  unit.rs  use_cases_test.rs
crates/mcb-application/tests/unit/: instrumented_embedding_tests.rs  main.rs  memory_service.rs  memory_service_tests.rs  memory_tests.rs  mod.rs  registry_tests.rs  search_tests.rs  shared_context.rs  test_utils.rs  use_cases_tests.rs  utils.rs  vcs_indexing.rs  vcs_indexing_tests.rs
crates/mcb-application/tests/utils/: mod.rs  shared_context.rs
crates/mcb-ast-utils/: Cargo.toml
crates/mcb-ast-utils/src/: complexity.rs  cursor.rs  error.rs  lib.rs  symbols.rs  visitor.rs  walker.rs
crates/mcb-ast-utils/tests/: unit.rs
crates/mcb-ast-utils/tests/unit/: common.rs  complexity_tests.rs  cursor_tests.rs  mod.rs  symbols_tests.rs  visitor_tests.rs  walker_tests.rs
crates/mcb-domain/: Cargo.toml
crates/mcb-domain/examples/: domain_schema_inspection.rs  schema_inspection.rs
crates/mcb-domain/src/: config_tests.rs  constants.rs  error.rs  lib.rs  macros.rs  mod.rs  test_services_config.rs  test_utils.rs  utils.rs
crates/mcb-domain/src/constants/: ast.rs  auth.rs  embedding.rs  events.rs  http.rs  io.rs  keys.rs  (+5 more)
crates/mcb-domain/tests/: chunk_repository_test.rs  integration.rs  memory_test.rs  phase7_integration.rs  unit.rs  vcs_context.rs
crates/mcb-infrastructure/: Cargo.toml
crates/mcb-infrastructure/src/: constants.rs  error_ext.rs  exports.rs  health.rs  lib.rs  logging.rs  macros.rs  mod.rs  provider_linker.rs  repositories.rs  resolution_context.rs
crates/mcb-infrastructure/tests/: auth_test.rs  integration.rs  lib.rs  memory_fts_test.rs  service_test.rs  service_tests.rs  shared_context.rs  snapshot_test.rs  sync_test.rs  unit.rs
crates/mcb-language-support/: Cargo.toml
crates/mcb-language-support/src/: chunking.rs  detection.rs  error.rs  language.rs  lib.rs  parser.rs
crates/mcb-language-support/tests/: unit.rs
crates/mcb-providers/: Cargo.toml
crates/mcb-providers/src/: constants.rs  exports.rs  lib.rs  macros.rs  provider_utils.rs
crates/mcb-providers/tests/: agent_repo.rs  index_repo.rs  observation_repo.rs  project_repo.rs  session_repo.rs  unit.rs  vcs_repo.rs
crates/mcb-server/: Cargo.toml
crates/mcb-server/examples/: schema_inspection.rs  server_schema_inspection.rs
crates/mcb-server/src/: args.rs  auth.rs  builder.rs  collection_mapping.rs  composition.rs  constants.rs  context_resolution.rs  error_mapping.rs  exports.rs  formatter.rs  graphql_store.rs  handler_helpers.rs  handler_macros.rs  init.rs  legacy_compat.rs  lib.rs  loco_app.rs  macros.rs  main.rs  mcp_server.rs  state.rs  vcs_repository_registry.rs
crates/mcb-server/tests/: error_mapping_test.rs  error_shape_tests.rs  formatter_test.rs  integration.rs  integration_helpers.rs  lib.rs  schema_regression_tests.rs  unit.rs
crates/mcb-utils/: Cargo.toml
crates/mcb-utils/src/: error.rs  lib.rs  macros.rs
crates/mcb-validate/: Cargo.toml  build.rs
crates/mcb-validate/benches/: validation_benchmark.rs
crates/mcb-validate/rules/: schema.json
crates/mcb-validate/src/: async_patterns.rs  clean_architecture.rs  code_quality.rs  config_quality.rs  constants.rs  declarative_validator.rs  dependency.rs  documentation.rs  embedded_rules.rs  error_boundary.rs  exports.rs  generic_reporter.rs  hygiene.rs  implementation.rs  kiss.rs  layer_flow.rs  lib.rs  macros.rs  naming.rs  organization.rs  pattern_validator.rs  patterns.rs  performance.rs  pmat.rs  pmat_native.rs  port_adapter.rs  provider.rs  quality.rs  refactoring.rs  regex_patterns.rs  reporter.rs  run_context.rs  scan.rs  shaku.rs  solid.rs  test_quality.rs  tests_org.rs  thresholds.rs  unified_registry.rs  validator_entries.rs  (+4 more)
crates/mcb-validate/tests/: async_patterns_test.rs  documentation_test.rs  error_boundary_test.rs  implementation_test.rs  integration.rs  integration_ast.rs  integration_engines.rs  integration_linters.rs  integration_rca_metrics.rs  integration_test.rs  integration_yaml_metrics.rs  kiss_test.rs  organization_test.rs  patterns_test.rs  performance_test.rs  quality_test.rs  refactoring_test.rs  shaku_test.rs  solid_test.rs  test_constants.rs  test_one_validator.rs  test_utils.rs  tests_org_test.rs  unit.rs  utils.rs
crates/mcb/src/: lib.rs  loco_app.rs  logging.rs  main.rs
crates/mcb/tests/: startup_smoke_integration.rs  stdio_transport_integration.rs  validate_test.rs
experiments/loco-rmcp-spike/: Cargo.toml  README.md
experiments/loco-rmcp-spike/src/: main.rs
(+13388 files in other folders)
