[workspace]
members = [
    "crates/mcp-context-browser",
    "crates/docs-adr-validator",
    "crates/docs-generator",
    "crates/docs-quality-gate",
    "crates/docs-interactive-platform",
]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2021"
authors = ["Marlon Carvalho <marlonsc@proton.me>"]
license = "MIT"
repository = "https://github.com/marlonsc/mcp-context-browser"
keywords = ["mcp", "rust", "semantic-search", "code-analysis", "vector-embeddings"]
categories = ["development-tools", "api-bindings", "science::artificial-intelligence"]

