[workspace]
resolver = "2"
members = [
    "crates/mcb",
    "crates/mcb-domain",
    "crates/mcb-application",
    "crates/mcb-infrastructure",
    "crates/mcb-providers",
    "crates/mcb-server",
    "crates/mcb-validate",
    "crates/mcb-language-support",
    "crates/mcb-ast-utils",
]

[workspace.package]
repository = "https://github.com/marlonsc/mcb"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
homepage = "https://github.com/marlonsc/mcb"
license = "MIT"
version = "0.2.1-dev"
rust-version = "1.92"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Byte manipulation (RUSTSEC-2026-0007: require >=1.11.1)
bytes = "1.11.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "__tls"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File operations
walkdir = "2.5"
globset = "0.4"
fs2 = "0.4"

# Regex
regex = "1.12"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Mozilla Rust Code Analysis (fork with tree-sitter 0.26.3 + Kotlin)
rust-code-analysis = { git = "https://github.com/marlon-costa-dc/rust-code-analysis", branch = "master" }

# Template engines
handlebars = "6.0"
tera = "1.20"

# Markdown processing
pulldown-cmark = "0.13"

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.10"

# Authentication
# NOTE: jsonwebtoken removed in v0.1.4 (RUSTSEC-2023-0071) - was never actually used
bcrypt = "0.18"
argon2 = "0.5"
base64 = "0.22"

# Database
r2d2 = "0.8"
r2d2_postgres = "0.18"

# Hostname
hostname = "0.4"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.20", features = ["v4"] }
dirs = "6.0"

# HTTP server - Rocket (migrated from Axum in v0.1.2 - ADR-026)
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }

# System metrics
sysinfo = "0.38"
nix = { version = "0.31", features = ["fs"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-highlight = "0.26.3"

# Fast globbing
glob = "0.3"

# Git ignore parsing
ignore = "0.4"

# Concurrent processing
futures = "0.3"
async-stream = "0.3"
rayon = "1.8"

# Text processing
unicode-segmentation = "1.12"
html-escape = "0.2"

# Schema generation for MCP
schemars = "1.2"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# MCP SDK
rmcp = { version = "0.16", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
] }

# Advanced Multi-Provider Strategy
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
tokio-util = { version = "0.7", features = ["time", "rt"] }
dashmap = "6.0"
health = "0.2"

# EdgeVec high-performance vector database
edgevec = "0.8"

# Milvus vector database client (from git - crates.io v0.2 has lifetime bug)
milvus-sdk-rust = { version = "0.1.0", git = "https://github.com/milvus-io/milvus-sdk-rust.git" }

# Graph algorithms
petgraph = "0.8"

# Additional dependencies
async-trait = "0.1"
downcast-rs = "2.0"
futures-util = "0.3"

# Service layer improvements
itertools = "0.14"
humantime = "2.1"

# Event bus providers
async-nats = "0.46"

# Local embeddings without external services
fastembed = { version = "5.9", default-features = false, features = [
    "default",
] }

# Configuration watching
notify = "8.2"
arc-swap = "1.8"

# Shell expansion
shellexpand = "3.1"

# Compression
flate2 = "1.1"
tar = "0.4"
seahash = "4.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Additional crypto
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

# Logging appenders
tracing-appender = "0.2"

# Benchmarking
criterion = "0.8.1"

# Dependency Injection (IoC Container)
dill = "0.15"

# Plugin registration
linkme = "0.3"

# Development/testing
tempfile = "3.25"
serial_test = "3.2"
rstest = "0.26"
mockall = "0.14"
insta = { version = "1.41", features = ["json", "yaml", "redactions"] }

# ============================================
# mcb-validate specific dependencies
# ============================================

# Cargo metadata parsing (replaces manual Cargo.toml parsing)
cargo_metadata = "0.23"

# Manifest parsers for project detection (Phase 3: Git Advanced)
cargo_toml = "0.22"
quick-xml = "0.39"

# SQLite for file hash storage (Phase 3: Incremental indexing)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Git repository operations (Phase 2/3: Git indexing)
git2 = "0.20"

# YAML serialization
serde_yaml = "0.9"

# Rule Engines
rust-rule-engine = "1.19"
rusty-rules = "0.2"
evalexpr = "13"

# Additional validation
garde = { version = "0.22", features = ["derive"] }

# JSON Schema validation
jsonschema = "0.42"

# Pest parser for DSL
pest = "2.8"
pest_derive = "2.8"

# JSON Path navigation
jsonpath-rust = "1.0.4"

# Lazy static values
once_cell = "1.19"

# ============================================
# Build Profiles
# ============================================

[profile.release]
# Link-time optimization for smaller/faster binaries
lto = true
# Single codegen unit for better optimization
codegen-units = 1

[profile.dev]
# Faster compile times in development
incremental = true
