[workspace]
resolver = "2"
members = [
    "crates/mcb",
    "crates/mcb-domain",
    "crates/mcb-application",
    "crates/mcb-infrastructure",
    "crates/mcb-providers",
    "crates/mcb-server",
    "crates/mcb-validate",
]

[workspace.package]
repository = "https://github.com/marlonsc/mcb"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
homepage = "https://github.com/marlonsc/mcb"
license = "MIT"
version = "0.2.1-dev"
rust-version = "1.92"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
# ── Deny: hard errors, zero tolerance ──────────────────────────
dbg_macro = "deny"                       # no dbg!() in any code
todo = "deny"                            # no todo!() stubs
unimplemented = "deny"                   # no unimplemented!() stubs
empty_loop = "deny"                      # no spin loops
infinite_loop = "deny"                   # no unbounded loops
mem_forget = "deny"                      # no mem::forget (leak risk)
exit = "deny"                            # no process::exit (use proper shutdown)
lossy_float_literal = "deny"             # no imprecise float literals
rest_pat_in_fully_bound_structs = "deny" # no .. in fully matched structs
verbose_file_reads = "deny"              # use fs::read_to_string
fn_to_numeric_cast_any = "deny"          # no fn pointer to number casts
large_include_file = "deny"              # no include_bytes! on large files
empty_structs_with_brackets = "deny"     # use `struct Foo;` not `struct Foo {}`
format_push_string = "deny"              # use write!() instead of push_str(&format!())
needless_raw_strings = "deny"            # no raw strings without special chars
redundant_type_annotations = "warn"
rc_mutex = "deny"                        # Rc<Mutex<T>> is always wrong, use Arc<Mutex<T>>
try_err = "deny"                         # no `Err(e)?`, just `return Err(e)`
unnecessary_self_imports = "deny"        # no `use self as _`
tests_outside_test_module = "allow"
manual_string_new = "warn"              # use String::new() not "".to_string()

# ── Warn: should fix, tracked but non-blocking ────────────────
unwrap_used = "warn"                     # prefer ? or explicit handling
expect_used = "warn"                     # prefer ? or explicit handling
panic = "warn"                           # prefer Result/Option
print_stdout = "warn"                    # use tracing, not println!
print_stderr = "warn"                    # use tracing, not eprintln!
wildcard_enum_match_arm = "warn"         # explicit match arms catch new variants
str_to_string = "warn"                   # prefer .to_owned() for &str
inefficient_to_string = "warn"           # prefer .to_owned() when &str
clone_on_ref_ptr = "warn"               # Arc::clone(&x) not x.clone()
implicit_clone = "warn"                  # explicit .clone() over implicit
semicolon_if_nothing_returned = "warn"   # trailing semicolons on () returns
map_unwrap_or = "warn"                   # use map_or / map_or_else
match_same_arms = "warn"                 # merge identical match arms
redundant_closure_for_method_calls = "warn" # `.map(|x| x.foo())` → `.map(T::foo)`
uninlined_format_args = "warn"           # `format!("{x}")` not `format!("{}", x)`
trivially_copy_pass_by_ref = "warn"      # pass Copy types by value
unused_self = "warn"                     # methods that don't use self
large_futures = "warn"                   # large futures should be boxed
large_types_passed_by_value = "warn"     # pass large types by reference
missing_errors_doc = "warn"              # document Result error conditions
missing_panics_doc = "warn"              # document panic conditions
must_use_candidate = "warn"              # add #[must_use] where appropriate
return_self_not_must_use = "warn"        # builder methods should be #[must_use]
doc_markdown = "warn"                    # backticks for code in docs
module_name_repetitions = "allow"        # intentional: AgentSession, IssueComment etc. need prefix for clarity
needless_pass_by_value = "warn"          # pass by reference when ownership not needed
used_underscore_binding = "warn"         # don't use bindings prefixed with _

# ── Allow: intentional exceptions ──────────────────────────────
error_impl_error = "allow"               # our domain Error type is idiomatic Rust

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15"

# Byte manipulation
bytes = "1.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "__tls"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File operations
walkdir = "2.5"
normpath = "1"
globset = "0.4"
fs2 = "0.4"

# Regex
regex = "1.12"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Mozilla Rust Code Analysis (fork with tree-sitter 0.26.3 + Kotlin)
rust-code-analysis = { git = "https://github.com/marlon-costa-dc/rust-code-analysis", branch = "master" }

# Template engines
handlebars = "6.0"

# Markdown processing
pulldown-cmark = "0.13"

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.10"

# Authentication
bcrypt = "0.18"
argon2 = "0.5"
base64 = "0.22"

# Database
r2d2 = "0.8"
r2d2_postgres = "0.18"

# Hostname
hostname = "0.4"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }
dirs = "6.0"

# HTTP server (Axum)
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header", "query"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# System metrics
sysinfo = "0.38"
nix = { version = "0.31", features = ["fs"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-highlight = "0.26.3"

# Fast globbing
glob = "0.3"

# Git ignore parsing
ignore = "0.4"

# Concurrent processing
futures = "0.3"
async-stream = "0.3"
rayon = "1.8"

# Text processing
unicode-segmentation = "1.12"
html-escape = "0.2"

# Schema generation for MCP
schemars = "1.2"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# MCP SDK
rmcp = { version = "0.16", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
] }

# Advanced Multi-Provider Strategy
tokio-util = { version = "0.7", features = ["time", "rt"] }
dashmap = "6.0"
health = "0.2"

# EdgeVec high-performance vector database
edgevec = "0.8"

# Milvus vector database client (from git - crates.io v0.2 has lifetime bug)
milvus-sdk-rust = { version = "0.1.0", git = "https://github.com/milvus-io/milvus-sdk-rust.git" }

# Graph algorithms
petgraph = "0.8"

# Additional dependencies
async-trait = "0.1"
downcast-rs = "2.0"
futures-util = "0.3"
derive_more = { version = "2.0", features = ["full"] }
strum = "0.27"
strum_macros = "0.27"
delegate = "0.13"
typed-builder = "0.23"

# Service layer improvements
itertools = "0.14"
humantime = "2.1"

# Event bus providers
async-nats = "0.46"

# Local embeddings without external services
fastembed = { version = "5.11", default-features = false, features = [
    "default",
    "hf-hub-native-tls",
    "image-models",
    "ort-load-dynamic",
] }

# Configuration watching
notify = "8.2"
arc-swap = "1.8"

# Compression
flate2 = "1.1"
tar = "0.4"
seahash = "4.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Additional crypto
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"

# Logging appenders
tracing-appender = "0.2"

# Benchmarking
criterion = "0.8.1"

# Plugin registration (compile-time provider discovery)
linkme = "0.3"

# Development/testing
tempfile = "3.25"
serial_test = "3.2"
rstest = "0.26"
mockall = "0.14"
insta = { version = "1.41", features = ["json", "yaml", "redactions"] }

# ============================================
# mcb-validate specific dependencies
# ============================================

# Cargo metadata parsing (replaces manual Cargo.toml parsing)
cargo_metadata = "0.23"

# Manifest parsers for project detection (Phase 3: Git Advanced)
cargo_toml = "0.22"
quick-xml = "0.39"

# SQLite for file hash storage (Phase 3: Incremental indexing)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Git repository operations (Phase 2/3: Git indexing)
git2 = "0.20"

# YAML serialization
serde_yaml = "0.9"

# Rule Engines
rust-rule-engine = "1.19"
rusty-rules = "0.2"
evalexpr = "13"

# Additional validation
garde = { version = "0.22", features = ["derive"] }

# JSON Schema validation
jsonschema = "0.42"

# Pest parser for DSL
pest = "2.8"
pest_derive = "2.8"

# JSON Path navigation
jsonpath-rust = "1.0.4"

# Lazy static values
once_cell = "1.19"

# ============================================
# Build Profiles
# ============================================

[profile.release]
# Link-time optimization for smaller/faster binaries
lto = true
# Single codegen unit for better optimization
codegen-units = 1

[profile.dev]
# Faster compile times in development
incremental = true
