[package]
name = "mcb-application"
keywords = ["application", "use-cases", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Application layer for MCP Context Browser - Use cases and business logic orchestration"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mcb_application"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }


# NOTE: mcb-providers is NOT a dependency here to avoid circular deps.
# Providers register themselves into the linkme registry slices declared here.
# mcb-infrastructure pulls in mcb-providers to complete the registration.

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Dependency injection

# Plugin registration
linkme = { workspace = true }

# Utilities
uuid = { workspace = true }

# Async streams for event subscription
futures = { workspace = true }

# File system traversal for git indexing
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Real providers for integration tests - forces linkme registration
mcb-providers = { path = "../mcb-providers" }
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
toml = { workspace = true }
mcb-domain = { path = "../mcb-domain", features = ["test-utils"] }
