[package]
name = "mcb-ast-utils"
version = "0.1.5"
edition.workspace = true
license.workspace = true
description = "AST traversal and analysis utilities for MCP Context Browser"

[lints]
workspace = true

[dependencies]
# Language support for language identification
mcb-language-support = { path = "../mcb-language-support" }

# Tree-sitter for direct AST access
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-kotlin-ng.workspace = true

# Error handling
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
