[package]
name = "mcb-ast-utils"
description = "AST traversal and analysis utilities for MCP Context Browser"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
# Language support for language identification
mcb-language-support = { path = "../mcb-language-support" }

# Tree-sitter for direct AST access
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-kotlin-ng.workspace = true

# Error handling
thiserror.workspace = true
derive_more.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest = { workspace = true }
mockall = { workspace = true }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"
