[package]
name = "mcb-infrastructure"
version = "0.2.0"
edition = "2024"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["infrastructure", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Infrastructure layer for MCP Context Browser - Cross-cutting technical concerns"
repository = "https://github.com/marlonsc/mcb"
homepage = "https://github.com/marlonsc/mcb"
rust-version = "1.89"

[lib]
name = "mcb_infrastructure"
path = "src/lib.rs"

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }

# Application layer - use cases and business logic orchestration
mcb-application = { path = "../mcb-application" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# NOTE: atty removed in v0.1.4 - using std::io::IsTerminal (stable since Rust 1.70)

# Configuration
figment = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# CLI
clap = { workspace = true }

# File operations
walkdir = { workspace = true }

# Regex
regex = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Template engines
handlebars = { workspace = true }
tera = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
rand = { workspace = true }

# Authentication
# jsonwebtoken removed - unused dependency (RUSTSEC-2023-0071)
bcrypt = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# Database
r2d2 = { workspace = true }
r2d2_postgres = { workspace = true }

# Hostname
hostname = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Utilities
uuid = { workspace = true }
dirs = { workspace = true }

# NOTE: HTTP server dependencies (axum, tower) removed in v0.1.2 - now in mcb-server only

# System metrics
sysinfo = { workspace = true }
nix = { workspace = true }

# Fast globbing
glob = { workspace = true }

# Git ignore parsing
ignore = { workspace = true }

# Concurrent processing
futures = { workspace = true }
rayon = { workspace = true }

# Text processing
unicode-segmentation = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }

# Input validation
validator = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Advanced Multi-Provider Strategy
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
health = { workspace = true }

# Additional dependencies
async-trait = { workspace = true }
downcast-rs = { workspace = true }
futures-util = { workspace = true }

# Dependency Injection (IoC Container)
dill = { workspace = true }

# Service layer improvements
itertools = { workspace = true }
humantime = { workspace = true }

# Shell expansion
shellexpand = { workspace = true }

# Compression
flate2 = { workspace = true }
tar = { workspace = true }
seahash = { workspace = true }

# Additional crypto
pbkdf2 = { workspace = true }
hmac = { workspace = true }

# Logging appenders
tracing-appender = { workspace = true }

# SQLite for file hash storage (Phase 3: Incremental indexing)
sqlx = { workspace = true }

# Syntax highlighting
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
html-escape = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }

# Benchmarking
criterion = { workspace = true }

# Links providers into linkme distributed slices
mcb-providers = { path = "../mcb-providers" }

# Architecture validation (for MCP tool integration)
mcb-validate = { path = "../mcb-validate" }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = { workspace = true }
