[package]
name = "mcb-infrastructure"
keywords = ["infrastructure", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Infrastructure layer for MCP Context Browser - Cross-cutting technical concerns"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mcb_infrastructure"
path = "src/lib.rs"

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }

# Application layer - use cases and business logic orchestration
mcb-application = { path = "../mcb-application" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
figment = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# CLI
clap = { workspace = true }

# File operations
walkdir = { workspace = true }

# Regex
regex = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Template engines
handlebars = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
rand = { workspace = true }

# Authentication
bcrypt = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Utilities
uuid = { workspace = true }
dirs = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# Fast globbing
glob = { workspace = true }

# Git ignore parsing
ignore = { workspace = true }

# Concurrent processing
futures = { workspace = true }
rayon = { workspace = true }

# Text processing
unicode-segmentation = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }

# Input validation
validator = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Advanced Multi-Provider Strategy
tokio-util = { workspace = true }
dashmap = { workspace = true }
health = { workspace = true }

# Additional dependencies
async-trait = { workspace = true }
downcast-rs = { workspace = true }
futures-util = { workspace = true }

# Dependency Injection (IoC Container)
dill = { workspace = true }

# Service layer improvements
itertools = { workspace = true }
humantime = { workspace = true }

# Shell expansion
shellexpand = { workspace = true }

# Additional crypto
pbkdf2 = { workspace = true }
hmac = { workspace = true }

# Logging appenders
tracing-appender = { workspace = true }

# SQLite for file hash storage (Phase 3: Incremental indexing)
sqlx = { workspace = true }

# Syntax highlighting
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-swift = { workspace = true }

# Links providers into linkme distributed slices
mcb-providers = { path = "../mcb-providers" }

# Architecture validation (for MCP tool integration)
mcb-validate = { path = "../mcb-validate" }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
mcb-domain = { path = "../mcb-domain", features = ["test-utils"] }
