[package]
name = "mcb-infrastructure"
keywords = ["infrastructure", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Infrastructure layer for MCP Context Browser - Cross-cutting technical concerns"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mcb_infrastructure"
path = "src/lib.rs"

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }
mcb-utils = { path = "../mcb-utils" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# File operations
walkdir = { workspace = true }

# Regex
regex = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }

# Authentication
argon2 = { workspace = true }
base64 = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Utilities
uuid = { workspace = true }

# Fast globbing
glob = { workspace = true }

# Git ignore parsing
ignore = { workspace = true }

# Concurrent processing
futures = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }

# Advanced Multi-Provider Strategy
dashmap = { workspace = true }
health = { workspace = true }

# Additional dependencies
async-trait = { workspace = true }
futures-util = { workspace = true }
linkme.workspace = true

# Service layer improvements
itertools = { workspace = true }

# Additional crypto
pbkdf2 = { workspace = true }
hmac = { workspace = true }

# SeaORM (database layer)
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# SQLite for legacy/direct queries
sqlx = { workspace = true }

# Syntax highlighting
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-swift = { workspace = true }

[features]
default = []
test-utils = []

[lints]
workspace = true

[dev-dependencies]
mcb-domain = { path = "../mcb-domain", features = ["test-utils"] }
mcb-utils = { path = "../mcb-utils" }
tempfile = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serial_test = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
mcb-validate = { path = "../mcb-validate" }
insta = { workspace = true }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
