[package]
name = "mcb-language-support"
description = "Unified language abstraction for MCP Context Browser"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Mozilla Rust Code Analysis (fork with tree-sitter 0.26.3 + Kotlin)
rust-code-analysis.workspace = true

# Error handling
thiserror.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization (for LanguageId)
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
