[package]
name = "mcb-providers"
version = "0.2.0"
edition = "2024"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["providers", "mcp", "semantic-search", "embedding", "vector-store"]
categories = ["development-tools", "api-bindings"]
description = "Provider implementations for MCP Context Browser - Embedding, Vector Store, Cache, and Language Chunking"
readme = "README.md"
repository = "https://github.com/marlonsc/mcb"
homepage = "https://github.com/marlonsc/mcb"
rust-version = "1.89"

[lib]
name = "mcb_providers"
path = "src/lib.rs"
# Doctests disabled due to rustls version conflict:
# - milvus-sdk-rust (git) → tonic 0.11 → rustls 0.22
# - reqwest/fastembed → rustls 0.23
# This causes "rlib format not found" errors during doctest compilation.
# Provider functionality is covered by unit tests instead.
doctest = false

[dependencies]
# Domain layer - contains provider port traits (Clean Architecture)
mcb-domain = { path = "../mcb-domain" }

# Application layer - for registry and admin/infrastructure ports
# Required for: linkme registry auto-registration, admin ports, infrastructure ports.
# NOTE: Provider traits (EmbeddingProvider, VectorStoreProvider, etc.) are in mcb-domain.
mcb-application = { path = "../mcb-application" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Async streams and futures
futures = { workspace = true }

# Time/date (for events)
chrono = { workspace = true }

# HTTP client (for API providers)
reqwest = { workspace = true }

# Regex for text processing
regex = { workspace = true }

# Text processing
unicode-segmentation = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Plugin registration
linkme = "0.3"

# Concurrent data structures
dashmap = { workspace = true }

# UUID generation (for admin operations)
uuid = { workspace = true }

# XDG directories (for cache paths)
dirs = "6.0"

# Manifest parsers for project detection (Phase 3)
cargo_toml = { workspace = true }
quick-xml = { workspace = true }

# Git repository operations (Phase 3)
git2 = { workspace = true }

# TOML parsing for Python pyproject.toml (Phase 3)
toml = { workspace = true }

# Tree-sitter core (always needed for chunking)
tree-sitter = { workspace = true }

# Tree-sitter language parsers
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }

# FastEmbed (heavy ML dependency)
fastembed = { workspace = true }

# Encryption for encrypted vector store
aes-gcm = { workspace = true }

# Moka cache
moka = { workspace = true }

# Redis cache
redis = { workspace = true }

# EdgeVec high-performance vector store
edgevec = { workspace = true }

# Milvus cloud vector database (has upstream lifetime bug in v0.2.0)
milvus-sdk-rust = { workspace = true }

# JSON Schema generation (for EdgeVec config)
schemars = { workspace = true }

# NATS for distributed events
async-nats = { workspace = true }

# SQLite for memory repository (uses generic schema from domain)
sqlx = { workspace = true }

[features]
default = []
hybrid-search = []

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
